frontend/test/should_fail/keepOneForEach_match_class_accumulation_method_type_mismatch3.grg
match class mc
{
	def var i:int;
	def -j:Edge->;
} \ keepOneForEach<i>Accumulate<j>By<sum>
